--- a/index.html
+++ b/index.html
@@ -1,1 +1,101 @@
+<!DOCTYPE html>
+<html>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Exported Figma Design</title>
+  <link href="https://fonts.googleapis.com/css?family=Inter&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="style.css">
+</head>
+<body>
+  <div class="library-history-1">
+    <div class="rectangle-13-2"></div>
+    <p class="text-3"><span class="text-black">Library/History</span></p>
 
+    <div class="video-tab-4">
+      <img src="images/ellipse-2-5.svg" class="ellipse-2-5" alt="ellipse-2" />
+    </div>
+
+    <div class="node-6">
+      <img src="images/vector-7.svg" class="vector-7" alt="vector" />
+    </div>
+
+    <div class="rectangle-45-8"></div>
+    <div class="rectangle-47-9"></div>
+    <p class="text-10"><span class="text-black">Watch history</span></p>
+    <p class="text-11"><span class="text-black">Settings</span></p>
+    <div class="rectangle-94-12"></div>
+    <div class="rectangle-88-13"></div>
+    <img src="images/rectangle-99-14.png" class="rectangle-99-14" alt="rectangle-99" />
+    <img src="images/rectangle-103-15.png" class="rectangle-103-15" alt="rectangle-103" />
+    <img src="images/polygon-17-16.svg" class="polygon-17-16" alt="polygon-17" />
+    <img src="images/polygon-19-17.svg" class="polygon-19-17" alt="polygon-19" />
+    <img src="images/rectangle-102-18.png" class="rectangle-102-18" alt="rectangle-102" />
+    <img src="images/rectangle-104-19.png" class="rectangle-104-19" alt="rectangle-104" />
+    <p class="text-20"><span class="text-black">Shorts</span></p>
+    <img src="images/polygon-18-21.svg" class="polygon-18-21" alt="polygon-18" />
+    <img src="images/polygon-20-22.svg" class="polygon-20-22" alt="polygon-20" />
+    <p class="text-23"><span class="text-black">Videos</span></p>
+
+    <div class="frame-10-24">
+      <p class="text-25"><span class="text-rgb-0-116-181">View all</span></p>
+    </div>
+    <div class="frame-11-26">
+      <p class="text-27"><span class="text-rgb-0-116-181">View all</span></p>
+    </div>
+
+    <div class="top-nav-bar-28">
+      <div class="battery-30">
+        <img src="images/rectangle-31.svg" class="rectangle-31" alt="rectangle" />
+        <img src="images/combined-shape-32.svg" class="combined-shape-32" alt="combined-shape" />
+        <img src="images/rectangle-33.svg" class="rectangle-33" alt="rectangle" />
+      </div>
+      <img src="images/wifi-34.svg" class="wifi-34" alt="wifi" />
+      <img src="images/mobile-signal-35.svg" class="mobile-signal-35" alt="mobile-signal" />
+      <div class="time-36">
+        <img src="images/9-41-37.svg" class="9-41-37" alt="9-41" />
+      </div>
+    </div>
+
+    <div class="component-34-38">
+      <div class="component-27-39">
+        <div class="rectangle-135-40"></div>
+        <div class="group-6-41">
+          <div class="home-42">
+            <img src="images/vector-43.svg" class="vector-43" alt="vector" />
+          </div>
+          <p class="text-44"><span class="text-black">Home</span></p>
+        </div>
+        <div class="group-7-45">
+          <div class="shorts-46">
+            <div class="group-47">
+              <img src="images/vector-48.svg" class="vector-48" alt="vector" />
+              <img src="images/vector-49.svg" class="vector-49" alt="vector" />
+            </div>
+          </div>
+          <p class="text-50"><span class="text-black">Shorts</span></p>
+        </div>
+        <div class="group-8-51">
+          <p class="text-52"><span class="text-black">Subscription</span></p>
+        </div>
+        <div class="group-9-53">
+          <p class="text-54"><span class="text-black">You</span></p>
+          <div class="you-55">
+            <img src="images/ellipse-51-56.svg" class="ellipse-51-56" alt="ellipse-51" />
+            <p class="text-57"><span class="text-black">A</span></p>
+          </div>
+        </div>
+        <div class="group-5-58">
+          <img src="images/ellipse-53-59.svg" class="ellipse-53-59" alt="ellipse-53" />
+          <div class="ic-outline-plus-60">
+            <img src="images/vector-61.svg" class="vector-61" alt="vector" />
+          </div>
+        </div>
+      </div>
+      <div class="subscription-62">
+        <img src="images/vector-63.svg" class="vector-63" alt="vector" />
+      </div>
+    </div>
+  </div>
+</body>
+</html>
