--- a/index.html
+++ b/index.html
@@ -1,101 +1,110 @@
 <!DOCTYPE html>
 <html>
-  <head>
+
+<head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Library</title>
+    <title>Exported Figma Design</title>
     <link href="https://fonts.googleapis.com/css?family=Inter&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="styles.css">
-  </head>
-  <body>
-    <div class="library-history-1">
-      <div class="rectangle-13-2"></div>
-      <p class="text-3"><span class="text-black">Library/History</span></p>
 
-      <div class="video-tab-4">
-        <img src="images/ellipse-2-5.svg" class="ellipse-2-5" alt="ellipse-2" />
-      </div>
+    <link rel="stylesheet" href="index.css">
+</head>
 
-      <div class="node-6">
-        <img src="images/vector-7.svg" class="vector-7" alt="vector" />
-      </div>
-
-      <div class="rectangle-45-8"></div>
-      <div class="rectangle-47-9"></div>
-      <p class="text-10"><span class="text-black">Watch history</span></p>
-      <p class="text-11"><span class="text-black">Settings</span></p>
-      <div class="rectangle-94-12"></div>
-      <div class="rectangle-88-13"></div>
-      <img src="images/rectangle-99-14.png" class="rectangle-99-14" alt="rectangle-99" />
-      <img src="images/rectangle-103-15.png" class="rectangle-103-15" alt="rectangle-103" />
-      <img src="images/polygon-17-16.svg" class="polygon-17-16" alt="polygon-17" />
-      <img src="images/polygon-19-17.svg" class="polygon-19-17" alt="polygon-19" />
-      <img src="images/rectangle-102-18.png" class="rectangle-102-18" alt="rectangle-102" />
-      <img src="images/rectangle-104-19.png" class="rectangle-104-19" alt="rectangle-104" />
-      <p class="text-20"><span class="text-black">Shorts</span></p>
-      <img src="images/polygon-18-21.svg" class="polygon-18-21" alt="polygon-18" />
-      <img src="images/polygon-20-22.svg" class="polygon-20-22" alt="polygon-20" />
-      <p class="text-23"><span class="text-black">Videos</span></p>
-
-      <div class="frame-10-24">
-        <p class="text-25"><span class="text-rgb-0-116-181">View all</span></p>
-      </div>
-      <div class="frame-11-26">
-        <p class="text-27"><span class="text-rgb-0-116-181">View all</span></p>
-      </div>
-
-      <div class="top-nav-bar-28">
-        <div class="battery-30">
-          <img src="images/rectangle-31.svg" class="rectangle-31" alt="rectangle" />
-          <img src="images/combined-shape-32.svg" class="combined-shape-32" alt="combined-shape" />
-          <img src="images/rectangle-33.svg" class="rectangle-33" alt="rectangle" />
-        </div>
-        <img src="images/wifi-34.svg" class="wifi-34" alt="wifi" />
-        <img src="images/mobile-signal-35.svg" class="mobile-signal-35" alt="mobile-signal" />
-        <div class="time-36">
-          <img src="images/9-41-37.svg" class="9-41-37" alt="9-41" />
-        </div>
-      </div>
-
-      <div class="component-34-38">
-        <div class="component-27-39">
-          <div class="rectangle-135-40"></div>
-          <div class="group-6-41">
-            <div class="home-42">
-              <img src="images/vector-43.svg" class="vector-43" alt="vector" />
+<body>
+    <div class="library-history-1-1">
+        <div class="library-hiistory-53">
+            <div class="rectangle-88-28"></div>
+            <div class="node-54">
+                <img src="images/vector-55.svg" class="vector-55" alt="vector" />
             </div>
-            <p class="text-44"><span class="text-black">Home</span></p>
-          </div>
-          <div class="group-7-45">
-            <div class="shorts-46">
-              <div class="group-47">
-                <img src="images/vector-48.svg" class="vector-48" alt="vector" />
-                <img src="images/vector-49.svg" class="vector-49" alt="vector" />
-              </div>
-            </div>
-            <p class="text-50"><span class="text-black">Shorts</span></p>
-          </div>
-          <div class="group-8-51">
-            <p class="text-52"><span class="text-black">Subscription</span></p>
-          </div>
-          <div class="group-9-53">
-            <p class="text-54"><span class="text-black">You</span></p>
-            <div class="you-55">
-              <img src="images/ellipse-51-56.svg" class="ellipse-51-56" alt="ellipse-51" />
-              <p class="text-57"><span class="text-black">A</span></p>
-            </div>
-          </div>
-          <div class="group-5-58">
-            <img src="images/ellipse-53-59.svg" class="ellipse-53-59" alt="ellipse-53" />
-            <div class="ic-outline-plus-60">
-              <img src="images/vector-61.svg" class="vector-61" alt="vector" />
-            </div>
-          </div>
+            <p class="text-56"><span class="text-black">Library/History</span></p>
         </div>
-        <div class="subscription-62">
-          <img src="images/vector-63.svg" class="vector-63" alt="vector" />
+        <div class="node-48">
+            <div class="button-1-49">
+                <p class="text-50"><span class="text-black">Watch history</span></p>
+            </div>
+            <div class="button-2-51">
+                <p class="text-52"><span class="text-black">Settings</span></p>
+            </div>
         </div>
-      </div>
+        <div class="videos-29">
+            <div class="videos-1-30">
+                <p class="text-31"><span class="text-black">Videos</span></p>
+                <img src="images/rectangle-104-32.png" class="rectangle-104-32" alt="rectangle-104" />
+                <!-- <img src="images/polygon-20-33.svg" class="polygon-20-33" alt="polygon-20" /> -->
+            </div>
+            <div class="videos-2-34">
+                <p class="text-35"><span class="text-rgb-0-116-181">View all</span></p>
+                <img src="images/rectangle-103-36.png" class="rectangle-103-36" alt="rectangle-103" />
+                <!-- <img src="images/polygon-19-37.svg" class="polygon-19-37" alt="polygon-19" /> -->
+            </div>
+        </div>
+        <div class="shorts-38">
+            <div class="shorts-1-39">
+                <p class="text-40"><span class="text-black">Shorts</span></p>
+                <img src="images/rectangle-102-41.png" class="rectangle-102-41" alt="rectangle-102" />
+                <!-- <img src="images/polygon-18-42.svg" class="polygon-18-42" alt="polygon-18" /> -->
+            </div>
+            <div class="shorts-2-43">
+                <p class="text-44"><span class="text-rgb-0-116-181">View all</span></p>
+                <img src="images/rectangle-99-45.png" class="rectangle-99-45" alt="rectangle-99" />
+                <!-- <img src="images/polygon-17-46.svg" class="polygon-17-46" alt="polygon-17" /> -->
+            </div>
+        </div>
+        <div class="rectangle-94-47"></div>
+        <!-- <div class="top-nav-bar-57">
+            <div class="battery-59">
+                <img src="images/rectangle-60.svg" class="rectangle-60" alt="rectangle" />
+                <img src="images/combined-shape-61.svg" class="combined-shape-61" alt="combined-shape" />
+                <img src="images/rectangle-62.svg" class="rectangle-62" alt="rectangle" />
+            </div>
+            <img src="images/wifi-63.svg" class="wifi-63" alt="wifi" />
+            <img src="images/mobile-signal-64.svg" class="mobile-signal-64" alt="mobile-signal" />
+            <div class="time-65">
+                <img src="images/9-41-66.svg" class="9-41-66" alt="9-41" />
+            </div>
+        </div> -->
+        <!-- <div class="component-34-2">
+            <div class="component-27-3">
+                <div class="rectangle-135-4"></div>
+                <div class="home-5">
+                    <div class="home-6">
+                        <img src="images/vector-7.svg" class="vector-7" alt="vector" />
+                    </div>
+                    <p class="text-8"><span class="text-black">Home</span></p>
+                </div>
+                <div class="shorts-9">
+                    <div class="shorts-10">
+                        <div class="group-11">
+                            <img src="images/vector-12.svg" class="vector-12" alt="vector" />
+                            <img src="images/vector-13.svg" class="vector-13" alt="vector" />
+                        </div>
+                    </div>
+                    <p class="text-14"><span class="text-black">Shorts</span></p>
+                </div>
+                <div class="subs-15">
+                    <p class="text-16"><span class="text-black">Subscription</span></p>
+                </div>
+                <div class="you-17">
+                    <p class="text-18"><span class="text-black">You</span></p>
+                    <div class="you-19">
+                        <img src="images/ellipse-51-20.svg" class="ellipse-51-20" alt="ellipse-51" />
+                        <p class="text-21"><span class="text-black">A</span></p>
+                    </div>
+                </div>
+                <div class="plus-22">
+                    <img src="images/ellipse-53-23.svg" class="ellipse-53-23" alt="ellipse-53" />
+                    <div class="ic-outline-plus-24">
+                        <img src="images/vector-25.svg" class="vector-25" alt="vector" />
+                    </div>
+                </div>
+            </div>
+            <div class="subscription-26">
+                <img src="images/vector-27.svg" class="vector-27" alt="vector" />
+            </div>
+        </div> -->
     </div>
-  </body>
+
+</body>
+
 </html>
